# pure-atelier

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/DirectEcs/: main.cpp  pch.h
src/DirectEcs/Component/: MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp  TransformComponent.h
src/DirectEcs/Core/: Application.cpp  Application.h  Clock.cpp  Clock.h  CommandQueue.cpp  CommandQueue.h  Controller.cpp  Controller.h  Window.cpp  Window.h  WindowProc.cpp  WindowProc.h
src/DirectEcs/ECSComponent/: MeshComponent.h  TransformComponent.h
src/DirectEcs/ECSCore/: Component.h  ComponentContainer.cpp  ComponentContainer.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  System.cpp  System.h
src/DirectEcs/GameCore/: ComponentBatch.h  ComponentContainer.h  Entity.cpp  Entity.h  Game.cpp  Game.h  IComponent.cpp  IComponent.h  ISystem.cpp  ISystem.h  Scene.cpp  Scene.h
src/DirectEcs/Object/: Mesh.cpp  Mesh.h
src/DirectEcs/Scene/: Component.cpp  Entity.cpp  Entity.h  ISystem.cpp  Scene.cpp  Scene.h
src/DirectEcs/System/: RenderSystem.cpp  RenderSystem.h
src/DirectEcs/Util/: Concept.h  Helper.cpp  Helper.h  Logger.cpp  Logger.h
src/DirectXECS/: Main.cpp  PCH.h
src/DirectXECS/Core/: Application.cpp  Application.h  Clock.cpp  Clock.h  CommandQueue.cpp  CommandQueue.h  Controller.cpp  Controller.h  Window.cpp  Window.h  WindowProc.cpp  WindowProc.h
src/DirectXECS/ECS/: Component.cpp  Component.h  ComponentContainer.cpp  ComponentContainer.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  System.cpp  System.h
src/DirectXECS/ECSComponent/: MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp  TransformComponent.h
src/DirectXECS/ECSCore/: Component.cpp  Component.h  ComponentContainer.cpp  ComponentContainer.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  System.cpp  System.h
src/DirectXECS/Object/: Mesh.cpp  Mesh.h
src/DirectXECS/Util/: Helper.cpp  Helper.h  Logger.cpp  Logger.h  WRLWrapper.h
src/PureAtelier/: main.cpp  pch.h
src/PureAtelier/Core/: Application.cpp  Application.h  Window.cpp  Window.h
src/PureAtelier/Graphics/: DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  DynamicDescriptorHeapAllocation.cpp  DynamicDescriptorHeapAllocation.h  DynamicDescriptorHeapPage.cpp  DynamicDescriptorHeapPage.h  GraphicsDevice.cpp  GraphicsDevice.h  ResourceHeap.cpp  (+6 more)
(+6 files in other folders)
